# sbepis-bevy

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: weekly-build.yml
Assets/SBEPIS/Capturellection/Deque/Deques/Hashmap/: Keyboard.prefab
Assets/SBEPIS/Common/Logo/: Logo Blurb.blend
Assets/SBEPIS/Scenes/: Demo.unity
Assets/Universal Render Pipeline Support/: Outline Renderer.asset  URP Renderer.asset
Assets/XR/Settings/: Open XR Package Settings.asset
assets/: Tutorial -  Friday Night Funkin' OST.m4a
assets/Gridbox Prototype Materials/: alphamask.py
component_groups/: Cargo.toml
component_groups/src/: lib.rs
jack_noir/: Cargo.toml
jack_noir/src/: main.rs
marching_cubes/: Cargo.toml
marching_cubes/src/: main.rs  march_tables.rs  marching_cubes.rs
mod_bin/: Cargo.toml
mod_bin/src/: main.rs
mod_lib/: Cargo.toml
mod_lib/src/: lib.rs
sbepis/: Cargo.toml  build.rs  fray.mid
sbepis/art/: assets.blend  imp.blend
sbepis/assets/: candy shader.wgsl  fray 4⁄4 lead.mid  fray 6⁄8 lead.mid  fray backing.mid  fray.mid  imp.glb  quest markers.glb  registry.json  supporters.names.ron
sbepis/assets/blueprints/: Button.glb  Cube.glb  House.glb  rock.glb
sbepis/assets/levels/: World.assets.ron  World.glb  World.meta.ron
sbepis/assets/materials/: Building.glb  Button Bottom.glb  Button Top.glb  Cube.glb  Door.glb  Material.glb  Planet.glb  Roof.glb
sbepis/assets/sources/: quest markers.blend
sbepis/src/: blenvy.rs  camera.rs  dialogue.rs  fray.rs  gravity.rs  input.rs  inventory.rs  jack_noir.rs  lib.rs  main.rs  main_bundles.rs  menus.rs  netcode.rs  npc.rs  npcs.rs  overview_camera.rs  questing.rs  skybox.rs  util.rs
sbepis/src/entity/: health.rs  mod.rs  movement.rs  orientation.rs  spawner.rs
sbepis/src/fray/: mod.rs  tracks.rs
sbepis/src/inventory/: mod.rs  screen.rs
sbepis/src/iter_system/: do.rs  done.rs  filter_some.rs  flatten.rs  inspect.rs  map.rs  mod.rs
sbepis/src/npcs/: consort.rs  imp.rs  mod.rs  name_tags.rs
sbepis/src/player_commands/: commands.rs  mod.rs  note_holder.rs  notes.rs  staff.rs
sbepis/src/player_controller/: camera_controls.rs  mod.rs  movement.rs
sbepis/src/player_controller/weapons/: hammer.rs  mod.rs  rifle.rs  sword.rs
sbepis/src/questing/: mod.rs  proposal.rs  quest_markers.rs  screen.rs
src/: fray.rs  gravity.rs  input.rs  main.rs  main_bundles.rs  overview_camera.rs  skybox.rs  util.rs
src/entity/: health.rs  mod.rs  movement.rs  orientation.rs
src/npcs/: mod.rs
src/player_commands/: commands.rs  mod.rs  note_holder.rs  notes.rs  staff.rs
src/player_controller/: air_movement.rs  camera_controls.rs  football.rs  interaction.rs  mod.rs  movement.rs  orientation.rs
src/player_controller/weapons/: hammer.rs  mod.rs  rifle.rs  sword.rs
