[package]
name = "sbepis-bevy"
version = "0.1.0"
edition = "2021"

[features]
debug = ["inspector", "overview_camera", "terminal"]
default = ["debug"]
inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera?/bevy_egui"]
overview_camera = ["dep:bevy_panorbit_camera"]
spawn_debug_notes_on_staff = []
terminal = []

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["wav", "mp3", "wayland"] }
bevy-inspector-egui = { version = "0.25.1", optional = true }
bevy_panorbit_camera = { version = "0.19.1", optional = true }
bevy_rapier3d = "0.27.0"
image = "0.25.2"
itertools = "0.13.0"
leafwing-input-manager = "0.14.0"
num-traits = "0.2.19"
winit = "0.30.4"
component_groups = { path = "component_groups" }

[build-dependencies]
winres = "0.1"
