[package]
name = "sbepis"
version = "0.1.0"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[features]
debug = [
	"inspector",
	"overview_camera",
	"terminal",
	"rapier_debug",
	"metronome",
]
default = []
inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera?/bevy_egui"]
metronome = []
overview_camera = ["dep:bevy_panorbit_camera"]
terminal = []
rapier_debug = []

[dependencies]
bevy = { version = "0.14.1", features = ["wav", "mp3", "wayland"] }
bevy-inspector-egui = { version = "0.25.1", optional = true }
bevy_panorbit_camera = { version = "0.19.1", optional = true }
bevy_rapier3d = "0.27.0"
image = "0.25.2"
itertools = "0.13.0"
leafwing-input-manager = "0.15.0"
num-traits = "0.2.19"
winit = "0.30.4"
rand = "0.8.5"
interpolation = "0.3.0"
uuid = "1.10.0"
serde = "1.0.215"
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
faker_rand = "0.1.1"
meshtext = "0.3.1"
augmented-midi = "1.8.0"
notation_midi = { git = "https://github.com/notation-fun/notation.git", package = "notation_midi" }
notation_model = { git = "https://github.com/notation-fun/notation.git", package = "notation_model" }
helgoboss-midi = "0.4.0"

[build-dependencies]
winres = "0.1"
