[package]
name = "sbepis"
version = "0.1.0"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
eq_op = "allow"

[features]
debug = ["inspector", "overview_camera", "terminal"]
default = []
inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera?/bevy_egui"]
metronome = []
overview_camera = ["dep:bevy_panorbit_camera"]
terminal = []
rapier_debug = []

[dependencies]
bevy = { version = "0.15.0", features = ["wav", "mp3", "wayland"] }
bevy-inspector-egui = { version = "0.28.0", optional = true }
bevy_panorbit_camera = { version = "0.21.1", optional = true }
bevy_rapier3d = "0.28.0"
image = "0.25.2"
itertools = "0.13.0"
leafwing-input-manager = "0.16.0"
num-traits = "0.2.19"
winit = "0.30.4"
rand = "0.8.5"
uuid = "1.10.0"
serde = "1.0.215"
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
faker_rand = "0.1.1"
meshtext = "0.3.1"
soundyrust = { path = "../soundyrust" }
blenvy = { git = "https://github.com/jwright159/Blenvy.git" }
bevy-butler = "0.5.4-alpha.3"
bevy_hanabi = "0.14.0"
typetag = "0.2.19"
bevy_edge_detection = "0.15.4"
bevy_mod_outline = {version="0.9.0", git="https://github.com/komadori/bevy_mod_outline.git"}

[build-dependencies]
winres = "0.1"
